Ajout du code html pour mon CV en ligne

--- a/index.html
+++ b/index.html
@@ -1,11 +1,72 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Mon premier index sur github</title>    
-  </head>
-  <body>
-	<h1>Bienvenu dans mon index</h1>
-    
-  </body>
-</html>>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+	<head>
+		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+		<!--[if lt IE 9]>
+    		<script 
+    		src="http://github.com/aFarkas/html5shiv/blob/master/dist/html5shiv.js"></script>
+		<![endif]-->
+		<link rel="stylesheet" href="style.css" />
+		<title>Curiculum Vitae Adeline MARIA</title>
+	</head>
+
+	<body>
+		<div id="liseret">
+		
+		</div>
+		
+		<header>
+			<figure>
+    			<a href="photo.jpg"><img src="photo_mini.jpg" alt="Photo d'identité " title="mon meilleur profil" /></a>
+   			</figure>
+   		
+			<h1> Adeline MARIA
+			</h1>
+		
+			<p>
+				<em>“Les découvertes récentes ont anéanti toutes nos illusions sur la simplicité de l'univers. ”</em> <br/>Gustave Le Bon <br/><br/>
+			</p>
+		</header>
+		
+			<section>
+				<h2>Mon expérience</h2>
+				<ul class="date">
+					<li> <strong>Aout 2015 :</strong> Hotesse pour <em>City One à Nice </em></li>
+					<li><strong>Septembre 2014 à juin 2015 :</strong> Volontaire en Service civique au sein de l'association <em> AFEV à Nice</em> avec pour mission la promotion de l'engagement solidaire dans les universités et l'animation du réseau. </li>
+					<li><strong>Mai 2014 :</strong> Animatrice pour <em>Globe In Store à Limoges</em> </li>
+					<li><strong>Mars 2012 à Mai 2012 :</strong> Stage de mémoire au sein du laboratoire <em>Geolab à Limoges</em> ayant pour sujet l'Initiation à la pédoanthracologie : application à un système montagnard, le Mont Lozère </li>
+					<li><strong>Avril 2011 à Juin 2011 :</strong> Stage en laboratoire au sein de <em>l'IRD de Bondy</em> ayant pour sujet l'Etude d'une famille aux multiples formes, les Apocinaceae</li>
+					<li><strong>Avril 2010 à Mai 2010 :</strong> Stage de recherche au laboratoire <em>Geoazur à Villefranche sur mer</em> ayant pour sujet l'Interprétation de la bathymétrie haute résolution au large de Nice </li>
+				</ul>
+			</section>
+
+			<section>
+				<h2>Mes compétences</h2>
+				<ul class="comp">
+					<li>Suites Bureautique: Open Office, Google Drive, Microsoft Office (tableur, traitement de texte...)</li>
+					<li>Logiciel de graphisme: Illustrator, Photoshop, Photofiltre, Corel Draw, Scribus, Gimp</li>
+					<li>Logiciel de lecture de MNT: Logiciel CARAIBES (Ifremer), Mathlab, SIG</li>
+					<li>Géologie: Cartographie, Minéralogie, interprétations de relevés géologiques</li>
+					<li>Terrain: Identification de roches, evenements tectoniques</li>
+					<li>Risques et aléas</li>
+					<li>Paléoenvironnement: Palynologie, Anthracologie, Archéobotanique</li>
+					<li>Langages du web: Html, Css, PHP, JavaScript, Jquery, MySQL, xml</li>
+					<li>Création audio et vidéo: Audacity, After Effect, Adobe Première Pro, Windows movie maker</li>
+					<li>Anglais</li>
+				</ul>
+			</section>
+
+			<section>
+				<h2 id="forma">Ma formation</h2>
+				<ul class="date">
+					<li><strong>Septembre 2012 à Mai 2014:</strong> Deust en Métiers de l'Internet <em> Université de Limoges</em> parcours conception et intégration multimédia </li>
+					<li><strong>Septembre 2010 à Juin 2012:</strong> Master Evolution, Patrimoine Naturel et Société <em>MNHN </em>Spécialité Quaternaire et Préhistoire: Paléoenvironnement, Lignée Humaine, Histoire des Sociétés.  </li>
+					<li><strong>Septembre 2007 à Juin 2010:</strong> Licence de Sciences de la Terre et Environnement <em>Université de Nice</em> Parcours Terre et Environnement</li>
+				</ul>
+			</section>
+		
+		
+	</body>
+
+</html>
