Supression de données privées sur index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     			<a href="photo.jpg"><img src="photo_mini.jpg" alt="Photo d'identité " title="mon meilleur profil" /></a>
    			</figure>
    		
-			<h1> Adeline MARIA
+			<h1> Adelune
 			</h1>
 		
 			<p>
